# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  REPORT.md  print.cpp  print.hpp
.github/workflows/: linux.yml
